Update Marathi bird guide PDF

--- a/latex/bird_guide.tex
+++ b/latex/bird_guide.tex
@@ -198,101 +198,114 @@ Under the following terms:
 \chapter*{Introduction}
 
 \introsection{%
-  The University of Pune (Savitribai Phule Pune University) campus is a biodiversity hotspot spread across 411 acres (166.33 hectares) in the heart of Pune city. Located at 18.5529°N 73.8352°E, the campus sits at an elevation of approximately 560 meters above sea level.
+  The University of Pune campus, ensconced in the transitional zone between the Western Ghats and the Deccan Plateau at 18.5529°N 73.8352°E, presents a singularly fascinating study in urban ornithology. This tract of 411 acres (166.33 hectares), rising to approximately 560 meters above mean sea level, exemplifies how judicious landscape management can create and maintain a remarkable avian sanctuary within an academic setting. The ecological significance of this location cannot be overstated, for it serves as a vital refuge where the avifauna of two distinct biogeographic regions intermingle.
 
-  \section*{Campus Environment}
-  The campus features diverse habitats that support a rich variety of birdlife. The landscape includes extensive wooded areas with native and exotic tree species, open grasslands, lawns, artificial water bodies, gardens, and building complexes. This mosaic of habitats provides excellent opportunities for both resident and migratory birds.
+  \section*{The Campus Environment}
+  The campus presents an instructive example of what might be termed an 'autonomous ecosystem.' Here, one encounters a meticulously preserved mosaic of biotopes, each supporting its distinctive assemblage of bird life. The extensive wooded groves, vestiges of the original semi-evergreen forest that once mantled these hills, harbour a rich congregation of arboreal species. These woodlands, interspersed with stretches of open grassland and manicured lawns, create an ideal gradation of habitats. Of particular ornithological interest are the artificial water bodies which, despite their modest dimensions, have proved remarkably effective in attracting both resident water birds and seasonal visitors.
 
   \section*{Flora and Vegetation}
-  The university grounds host over 150 species of trees, creating a veritable urban forest. Native species like Banyan (\textit{Ficus benghalensis}), Peepal (\textit{Ficus religiosa}), Neem (\textit{Azadirachta indica}), and Red Silk Cotton (\textit{Bombax ceiba}) dominate the landscape, while ornamental and introduced species like African Blackwood (\textit{Dalbergia melanoxylon}), Rain Tree (\textit{Samanea saman}), Gulmohar (\textit{Delonix regia}), and Copper Pod (\textit{Peltophorum pterocarpum}) add to the diversity. This rich vegetation provides vital nesting sites, roosting areas, and food sources for various bird species.
+  The arboreal wealth of the campus, comprising over 150 species of trees both indigenous and exotic, merits detailed examination for its influence on the resident avifauna. The venerable specimens of Banyan (\textit{Ficus benghalensis}) and Peepal (\textit{Ficus religiosa}) deserve particular attention. These magnificent trees, through their asynchronous fruiting patterns, ensure a year-round food supply for frugivorous species, notably the barbets, mynas, and orioles. The indigenous Neem (\textit{Azadirachta indica}), with its dense canopy, and the Red Silk Cotton (\textit{Bombax ceiba}), with its numerous natural cavities, provide premium nesting sites for cavity-nesting species. The introduced African Blackwood (\textit{Dalbergia melanoxylon}), Rain Tree (\textit{Samanea saman}), Gulmohar (\textit{Delonix regia}), and Copper Pod (\textit{Peltophorum pterocarpum}) have integrated seamlessly into this urban forest, their flowers and foliage supporting diverse insect populations that, in turn, sustain insectivorous birds.
 }{%
    
-  \section*{Human Impact}
-  The campus ecosystem faces various anthropogenic pressures that affect bird populations:
+  \section*{Anthropogenic Influences}
+  The avifauna of the campus has demonstrated remarkable adaptability to human presence, though certain anthropogenic pressures warrant careful consideration:
+
   \begin{itemize}
-  \item Regular vehicular movement along campus roads
-  \item Ongoing construction and development activities
-  \item Presence of a large student population
-  \item Regular maintenance activities including gardening and landscaping
-  \item Noise and dust pollution from nearby urban areas
-  \item Light pollution from campus buildings and facilities
+  \item The vehicular movement along campus arteries, while moderate, has led to interesting behavioral adaptations, particularly among ground-feeding species such as mynas and doves, which have learned to gauge and time their foraging activities accordingly
+  
+  \item Construction activities, paradoxically, have created novel opportunities for certain species. The House Swift and Dusky Crag Martin, for instance, have readily adapted to nesting on modern buildings, while wire-stringing has provided convenient perches for drongos and bee-eaters
+  
+  \item The substantial student population has inadvertently created a mosaic of human activity zones, leading to fascinating patterns of temporal and spatial partitioning among different bird species
+  
+  \item Horticultural practices, including the seasonal pruning of trees and maintenance of lawns, while necessary, have spurred adaptive responses in nesting birds, particularly in terms of nest-site selection and timing of breeding
+  
+  \item The peripheral urban pressure, manifesting through noise and atmospheric pollution, has led to notable adjustments in the vocal behavior of several species, particularly evident in the early morning chorus
+  
+  \item Artificial illumination has induced remarkable adaptations among certain species, notably the Indian Robin and Common Myna, which have extended their foraging hours into the crepuscular period
   \end{itemize}
 }
 
 \introsection{%
-  \section*{When to Watch}
-  \textbf{Time of Day:}
+  \section*{Optimal Observation Periods}
+  The study of campus avifauna requires methodical attention to both diurnal and seasonal rhythms, each presenting distinct opportunities for observation and behavioral study.
+
+  \textbf{Diurnal Rhythm:}
   \begin{itemize}
-  \item Early morning (6:00-9:00 AM): Peak activity as birds forage for breakfast
-  \item Late afternoon (4:00-6:30 PM): Second wave of feeding activity
-  \item Midday: Good for watching raptors soaring on thermal currents
-  \item Dusk: Best time to spot nocturnal species like owls becoming active
+  \item Dawn to Early Morning (0600-0900 hrs): This period proves invariably the most rewarding for systematic observation. The dawn chorus, initiated typically by the Magpie Robin and Red-vented Bulbul, heralds a burst of activity as diurnal species emerge from their roosts. Particular attention should be paid to the sequence of awakening, which follows a remarkably consistent pattern
+  
+  \item Late Morning (0900-1100 hrs): As the day warms, attention should turn skyward. This period is optimal for studying the hunting behavior of resident raptors, particularly the Black Kite and Shikra, as they utilize the developing thermals. The various swifts and swallows, too, are notably active at this hour
+  
+  \item Midday (1100-1500 hrs): Though general activity diminishes, this period offers excellent opportunities for studying certain specific behaviors. The communal bathing of babblers and bulbuls, the hunting techniques of drongos, and the roosting habits of owls merit particular attention
+  
+  \item Late Afternoon (1500-1830 hrs): A second peak of avian activity commences as the day cools. This period is especially profitable for observing mixed-species feeding associations and the formation of pre-roosting assemblages. The calls and displays of barbets and cuckoos reach their evening crescendo during this time
+  
+  \item Dusk (1830-1930 hrs): A fascinating period of transition when diurnal species retire and nocturnal birds, particularly the Spotted Owlet and Mottled Wood Owl, begin their activities. The roosting assemblies of mynas and parakeets provide instructive studies in social behavior
   \end{itemize}
 
-  \textbf{Seasonal Highlights:}
+  \textbf{Seasonal Fluctuations:}
   \begin{itemize}
-  \item Winter (November-February): Peak season with numerous winter visitors
-  \item Monsoon (June-September): Best for watching breeding activities
-  \item Summer (March-May): Good for observing resident breeding birds
-  \item Post-monsoon (October): Opportunity to spot passage migrants
+  \item Winter (November-February): The cold weather brings a remarkable enrichment of the campus avifauna. The arrival of winter visitors, notably the Grey Wagtail, Lesser Whitethroat, and various flycatchers, provides opportunities for studying migration patterns and habitat utilization. The resident birds, too, show interesting behavioral adaptations to the cooler temperatures
+  
+  \item Pre-monsoon (March-May): This period marks the peak of breeding activity among resident species. Of particular interest are the nest-building activities of the various babblers, sunbirds, and flowerpeckers. The declining winter visitors and their pre-migration behavior warrant careful observation
+  
+  \item Monsoon (June-September): Despite the meteorological challenges, this season offers unique opportunities for studying breeding biology. The response of different species to rainfall patterns, particularly in terms of feeding and nesting behavior, provides fascinating insights into avian adaptability
+  
+  \item Post-monsoon (October): A period of ecological transition marked by the appearance of early winter visitors. The behavioral interactions between resident and migratory species during this period deserve special attention
   \end{itemize}
 }{%
-  \section*{Acknowledgments}
-  Special thanks to the dedicated birdwatchers 
-  who have contributed extensively to documenting 
-  the avifauna of SPPU campus through eBird 
-(\href{https://ebird.org/hotspot/L1838309}{SPPU eBird Hotspot}).
-   
-  Their systematic observations have greatly enhanced our 
-  understanding of bird diversity and seasonal patterns 
-  on campus.
+  \section*{A Note on Documentation}
+  The systematic documentation of campus avifauna has been greatly facilitated by the dedication of numerous observers who have contributed their records to eBird (\href{https://ebird.org/hotspot/L1838309}{SPPU eBird Hotspot}). These accumulated observations, spanning several years, have proved invaluable in understanding population dynamics, seasonal movements, and breeding patterns. The importance of maintaining such long-term records cannot be overstated, for they provide the foundation for understanding the complex ecological relationships that exist within this urban sanctuary.
+
+  The methodical recording of observations, whether of common or unusual occurrences, contributes significantly to our understanding of urban bird ecology. Particular attention should be paid to breeding records, unusual behavioral observations, and any changes in population patterns that might indicate broader ecological trends.
 }
 
 \introsection{%
-  \section*{How to Watch}
+  \section*{Field Equipment and Methodology}
+  The study of birds, while immensely rewarding, demands careful attention to both equipment and technique. The following recommendations stem from extensive field experience:
+
   \textbf{Essential Equipment:}
   \begin{itemize}
-  \item Binoculars: 8x42 or 10x42 recommended for beginners
-  \item Field guide: I highly recommend 
-  \textit{Birds of the Indian Subcontinent} by Grimmett, Inskipp \& Inskipp
-  \item Notebook for recording observations
+  \item Binoculars: While various optical instruments are available, a pair of 8x40 or 10x42 binoculars proves most efficacious for general observation. The 8x40 configuration is particularly advantageous for following birds in flight, offering an optimal balance between magnification and field of view. The slightly higher magnification of 10x42 glasses may be preferred for detailed plumage studies, though at some cost to brightness and field width
+  
+  \item Field Guide: Among the numerous guides available, Grimmett, Inskipp \& Inskipp's \textit{Birds of the Indian Subcontinent} stands preeminent for its comprehensive treatment and accurate illustrations. One should, however, supplement this with regional works for local variations and behavioral notes
+  
+  \item Field Notebook: The importance of maintaining detailed field notes cannot be overemphasized. One's notebook should record not merely species identification but also behavioral observations, ecological associations, and environmental conditions. These contemporaneous notes, however rough, invariably prove more reliable than memory
   \end{itemize}
 
-  \textbf{Useful Apps:}
+  \textbf{Modern Aids:}
+  While traditional methods retain their primacy, certain modern tools merit judicious incorporation:
   \begin{itemize}
-  \item eBird: For recording sightings and exploring hotspots
-  \item Merlin Bird ID: Helps identify birds through photos or sounds
-  \item BirdNet: AI-powered bird sound identification
+  \item eBird: This digital platform has revolutionized the collection and analysis of bird distribution data. Its standardized protocols facilitate the meaningful comparison of observations across time and space
+  
+  \item Merlin Bird ID: Though no substitute for field experience, this application proves particularly valuable for beginners in narrowing down identification possibilities
+  
+  \item BirdNet: While useful for preliminary identification of bird calls, this tool should be employed as an aid to, rather than a replacement for, direct field observation and learning
   \end{itemize}
 }{%
-  \section*{More Tips}
+  \section*{Field Craft}
+  The art of bird observation demands more than mere technical proficiency. Success in the field depends largely upon:
   \begin{itemize}
-  \item Wear earth-toned clothing to blend with surroundings
-  \item Move slowly and quietly to avoid startling birds
-  \item Avoid using flash photography
-  \item Keep a safe distance from nests and breeding areas
-  \item Record your observations in eBird after each session
+  \item Appropriate Attire: One's clothing should harmonize with the environment, avoiding bright colors and rustling fabrics. Earth tones prove most suitable
+  
+  \item Movement: The seasoned observer moves with deliberation, avoiding sudden gestures that might startle birds. Often, remaining motionless proves more productive than active searching
+  
+  \item Approach: When studying nesting birds, one must exercise particular restraint. The observer's enthusiasm must never override the welfare of the subjects
+  
+  \item Documentation: The immediate recording of observations, while the impression remains fresh, is essential. Even seemingly trivial details may later prove significant
+  
+  \item Contribution: The regular submission of records to established databases ensures that individual observations contribute to the broader understanding of avian ecology
   \end{itemize}
 }
 
 \introsection{%
-  \section*{About This Guide}
-  This field guide documents the diverse bird species 
-  found within the university campus. The most common 
-  species, which represent about half the bird species 
-  recorded on campus, are included here.
-  
-  Each entry includes 
-  detailed information about the bird's appearance, 
-  behavior, and habitat preferences, 
-  accompanied by high-quality photographs. 
-  The nomenclature follows current taxonomic standards, 
-  with both scientific and common names provided for 
-  easy reference.
+  \section*{Scope and Purpose}
+  This guide endeavours to present a systematic account of the more frequently encountered avian species within the University campus. While not aspiring to complete comprehensiveness, it includes detailed treatments of those birds that the regular observer might reasonably expect to encounter during the course of a year's observations.
 
-  This source materials for this guide are available online at 
-  \href{http://github.com/yogeshw/sppu-bird-guide}{http://github.com/yogeshw/sppu-bird-guide}. 
-  Issues and pull requests may be submitted there. 
+  Each species account synthesizes field identification features with notes on behavior, habitat preferences, and breeding biology where known. The accompanying photographs have been selected primarily for their diagnostic value rather than mere aesthetic appeal. The nomenclature adheres to current taxonomic understanding, though one must note that this remains subject to periodic revision as our knowledge advances.
+
+  The digital version of this documentation, maintained at \href{http://github.com/yogeshw/sppu-bird-guide}{http://github.com/yogeshw/sppu-bird-guide}, welcomes scholarly contributions and corrections. The dynamic nature of this format allows for regular updates as new observations come to light or taxonomic revisions necessitate changes.
+
+  It is hoped that this guide will not merely facilitate identification but also stimulate systematic observation and documentation of the campus avifauna, thereby contributing to our understanding of urban bird ecology in the Western Ghats region.
 }
 
 \vspace{1cm}
