Updated bird sizes

--- a/latex/bird_guide.tex
+++ b/latex/bird_guide.tex
@@ -314,7 +314,7 @@ Under the following terms:
 \chapter{Birds}
 
 \birdentry{Black Kite}{\textit{Milvus migrans}}
-  {Kite size}
+  {Kite-sized}
   {Very common resident}
   {Large raptor with forked tail. Dark brown plumage. Wings held in shallow V when soaring. Wings appear pale from below.}
   {Throughout campus, especially near human habitation}
@@ -494,7 +494,7 @@ Under the following terms:
   {plum-headed-parakeet.jpg}
 
 \birdentry{House Swift}{\textit{Apus affinis}}
-  {Myna-}
+  {Bulbul}
   {Very common resident}
   {Small swift with white rump and shallow-forked tail. Overall dark brown-black plumage. Wings long and scythe-shaped.}
   {Common throughout urban areas of the campus.}
@@ -539,7 +539,7 @@ Under the following terms:
   {asian-green-bee-eater.jpg}
 
 \birdentry{Coppersmith Barbet}{\textit{Megalaima haemacephala}}
-  {Bulbul+}
+  {Bulbul}
   {Common resident}
   {Small stocky bird (16.5-17 cm) with distinctive pattern: grass-green overall with crimson forehead, crown and throat patch. Black eye-stripe and throat-band. Yellow patches around eyes and at base of lower mandible. Heavy, chisel-like bill. Sexes alike.}
   {Wooded areas throughout campus, particularly partial to fig trees and other fruiting species.}
